--- a/GuideDetails.html
+++ b/GuideDetails.html
@@ -63,7 +63,7 @@
                                             </li>
                                             <li><a class href="ViewGuideBookings.html">View Bookings</a>
                                             </li>
-
+                                            <li><a class href="Emergency.html">EmergencyService</a>
                                             <!-- #### LogIn FormatMenu START #### -->
                                             <li id="login"><a style='cursor:pointer' id="btnLogin"
                                                     onclick="login()">Login</a></li>
@@ -112,18 +112,16 @@
                             <div class="col-12">
                                 <nav class="navbar navbar-expand-md bg-dark navbar-dark invisible" id='navMobileNav'>
                                     <div class="row">
-                                        <div class="col-8">
-                                            <a class="navbar-brand" href="#">
-                                                <img data-cfsrc="img/TouristLogo.png" alt=""
-                                                    src="img/TouristLogo.png">
-                                            </a>
-                                        </div>
                                         <div class="col-4">
                                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                                 data-target="#collapsibleNavbar">
                                                 <span class="navbar-toggler-icon"></span>
                                             </button>
-
+                                        </div>
+                                        <div class="col-8">
+                                            <a class="navbar-brand" href="#">
+                                                <img data-cfsrc="img/TouristLogo.png" alt="" src="img/TouristLogo.png">
+                                            </a>
                                         </div>
                                         <div class="col-12">
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -134,7 +132,7 @@
                                         </div>
                                     </div>
                                 </nav>
-                        </div>
+                            </div>
                     </div>
                 </div>
             </div>
