--- a/Emergency.html
+++ b/Emergency.html
@@ -140,7 +140,28 @@
                                 </a>
                             </div> -->
                             <div class="col-12">
-                                <div class="mobile_menu d-block d-lg-none"></div>
+                                <nav class="navbar navbar-expand-md bg-dark navbar-dark invisible" id='navMobileNav'>
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                                data-target="#collapsibleNavbar">
+                                                <span class="navbar-toggler-icon"></span>
+                                            </button>
+                                        </div>
+                                        <div class="col-8">
+                                            <a class="navbar-brand" href="#">
+                                                <img data-cfsrc="img/TouristLogo.png" alt="" src="img/TouristLogo.png">
+                                            </a>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                                                <ul class="navbar-nav" id='ulMobileNav'>
+
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </nav>
                             </div>
                         </div>
                     </div>
@@ -149,6 +170,48 @@
         </div>
     </header>
 
+    <div class='row text-center invisible' id='divSignInWithNumber'>
+        <div class='col-lg-4 col-md-2 col-sm-12'>&nbsp;</div>
+
+        <div class='col-lg-4 col-md-8 col-sm-12 text-center'>
+            <form>
+                <div class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-12 pad5">
+                        <input class='form-control' input='number' id='txtPhoneNumber' maxlength="10" minlength="10"
+                            placeholder='Mobile Number (+91)'></input>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-12 pad5">
+                        <input class='form-control' input='Name' id='txtName' placeholder='Name'></input>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-12 pad5">
+                        <div id='captchaContainer'></div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 pad5">
+                        <button id="btnSendOTP" class='float-left btn btn-primary' type='button'>
+                            Send OTP <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+            <br>
+            <form>
+                <div class="row">
+                    <div class="col-lg-8 col-md-8 col-sm-12 pad5">
+                        <input input='number' id='txtOTP' class='form-control' placeholder='OTP'></input> &nbsp;
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 pad5">
+                        <button id="btnSignUpUsingNumber" class='btn btn-success' type='button'>
+                            Verify <i class="fa fa-check" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+
+
+        </div>
+        <div class='col-lg-4 col-md-2 col-sm-12'>&nbsp;</div>
+
+    </div>
 
     <div class="bradcam_area bradcam_bg_2">
         <div class="container">
