--- a/ViewGuideBookings.html
+++ b/ViewGuideBookings.html
@@ -62,6 +62,7 @@
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a> </li>
+                                            <li><a class href="Emergency.html">EmergencyService</li>                                        
                                             <li><a class href="ViewGuideBookings.html">ViewGuideBookings</a> </li>
                                             <li><a class href="GuideDetails.html">GuideDetails</a> </li>
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
@@ -117,18 +118,16 @@
                             <div class="col-12">
                                 <nav class="navbar navbar-expand-md bg-dark navbar-dark invisible" id='navMobileNav'>
                                     <div class="row">
-                                        <div class="col-8">
-                                            <a class="navbar-brand" href="#">
-                                                <img data-cfsrc="img/TouristLogo.png" alt=""
-                                                    src="img/TouristLogo.png">
-                                            </a>
-                                        </div>
                                         <div class="col-4">
                                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                                 data-target="#collapsibleNavbar">
                                                 <span class="navbar-toggler-icon"></span>
                                             </button>
-
+                                        </div>
+                                        <div class="col-8">
+                                            <a class="navbar-brand" href="#">
+                                                <img data-cfsrc="img/TouristLogo.png" alt="" src="img/TouristLogo.png">
+                                            </a>
                                         </div>
                                         <div class="col-12">
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -139,7 +138,7 @@
                                         </div>
                                     </div>
                                 </nav>
-                        </div>
+                            </div>
                     </div>
                 </div>
             </div>
