--- a/ViewMyBookings.html
+++ b/ViewMyBookings.html
@@ -62,6 +62,7 @@
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a> </li>
+                                            <li><a class href="Emergency.html">EmergencyService</a> </li>                                          
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
@@ -113,7 +114,28 @@
                                 </a>
                             </div> -->
                             <div class="col-12">
-                                <div class="mobile_menu d-block d-lg-none"></div>
+                                <nav class="navbar navbar-expand-md bg-dark navbar-dark invisible" id='navMobileNav'>
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                                data-target="#collapsibleNavbar">
+                                                <span class="navbar-toggler-icon"></span>
+                                            </button>
+                                        </div>
+                                        <div class="col-8">
+                                            <a class="navbar-brand" href="#">
+                                                <img data-cfsrc="img/TouristLogo.png" alt="" src="img/TouristLogo.png">
+                                            </a>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                                                <ul class="navbar-nav" id='ulMobileNav'>
+
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </nav>
                             </div>
                         </div>
                     </div>
