--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li class="nav-item"><a class="active nav-link" href>Home</a></li>
+                                            <li class="nav-item"><a class="active nav-link" href="index.html">Home</a></li>
                                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                                             <li class="nav-item">
                                                 <a class="nav-link" href="travel_destination.html">Destination</a>
