--- a/ViewGuideBookings.html
+++ b/ViewGuideBookings.html
@@ -66,7 +66,7 @@
                                             </li>
                                             <li class="nav-item">
                                                 <a class="nav-link" href="Emergency.html">EmergencyService</a>
-                                            </li>                                        
+                                            </li>
                                             <li class="nav-item">
                                                 <a class="nav-link" href="ViewGuideBookings.html">ViewBookings</a>
                                             </li>
@@ -153,10 +153,10 @@
                                     </div>
                                 </nav>
                             </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </header>
 
 
@@ -199,6 +199,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div id="divMobileViewBookings">
+        
     </div>
 
 
@@ -281,7 +284,7 @@
                             <h3 class="footer_title">
                                 Instagram
                             </h3>
-                            <div class="instagram_feed" id='instagram_feed2'>                                
+                            <div class="instagram_feed" id='instagram_feed2'>
                             </div>
                         </div>
                     </div>
@@ -471,27 +474,27 @@
             width: 13%;
         }
     </style>
-     <script src="js/jquery.instagramFeed.min.js"></script>
-     <script id="loadInstagram">
-         $(() => {
-             $.instagramFeed({
-                 'username': 'touristguide2021',
-                 'container': "#instagram_feed2",
-                 'display_profile': false,
-                 'display_biography': false,
-                 'display_gallery': true,
-                 'display_captions': false,
-                 'max_tries': 10,
-                 'callback': null,
-                 'styling': true,
-                 'items': 6,
-                 'items_per_row': 3,
-                 'margin': 1,
-                 'lazy_load': false,
-                 'on_error': console.error
-             });
-         });
-     </script>
+    <script src="js/jquery.instagramFeed.min.js"></script>
+    <script id="loadInstagram">
+        $(() => {
+            $.instagramFeed({
+                'username': 'touristguide2021',
+                'container': "#instagram_feed2",
+                'display_profile': false,
+                'display_biography': false,
+                'display_gallery': true,
+                'display_captions': false,
+                'max_tries': 10,
+                'callback': null,
+                'styling': true,
+                'items': 6,
+                'items_per_row': 3,
+                'margin': 1,
+                'lazy_load': false,
+                'on_error': console.error
+            });
+        });
+    </script>
 </body>
 
 </html>
