--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                                         </script>
                                         <script type="text/javascript"
                                             src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
-                                        <img data-cfsrc="img/TouristLogo.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/TouristLogo.png" alt></noscript>
+                                        <img data-cfsrc="img/TouristLogo.png" alt style="display:none;visibility:hidden;max-height: 100px !important;
+                                            max-width: 150px !important;"><noscript><img style="max-height: 100px !important;
+                                            max-width: 150px !important;" src="img/TouristLogo.png" alt></noscript>
                                     </a>
                                 </div>
                             </div>
@@ -171,7 +171,8 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li class="nav-item"><a class="active nav-link" href="index.html">Home</a></li>
+                                            <li class="nav-item"><a class="active nav-link" href="index.html">Home</a>
+                                            </li>
                                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                                             <li class="nav-item">
                                                 <a class="nav-link" href="travel_destination.html">Destination</a>
